<?xml version="1.0"?>
<package>
  <name>python_mar_bridge</name>
  <version>0.0.1</version>
  <description>The python_mar_bridge package</description>
  <maintainer email="dfornas@uji.es">dfornas</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/python_mar_bridge</url> -->
  <author email="dfornas@uji.es">David Fornas</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>arm5e_arm_services</build_depend>
  <build_depend>pcl_manipulation</build_depend>
    
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>arm5e_arm_services</run_depend>
  <run_depend>pcl_manipulation</run_depend>

  <export>

  </export>
</package>
